# PamEase

./: .gitignore  CMakeLists.txt  README.md
.run/: fuzzy.run.xml
resources/pam-auth-update/: fuzzy.conf
src/: base.cpp  base.hpp  pam_exception.cpp  pam_exception.hpp  pam_utils.cpp  pam_utils.hpp  so_utils.cpp  so_utils.hpp  sync_generator.hpp  sync_generator.inc
src/modules/: fuzzy.cpp  test.cpp
